--- a/main/main.ipynb
+++ b/main/main.ipynb
@@ -2,109 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>Status</th>\n",
-       "      <th>Client IP</th>\n",
-       "      <th>Method</th>\n",
-       "      <th>Endpoint</th>\n",
-       "      <th>Response Time (s)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2025-02-18 08:21:25</td>\n",
-       "      <td>200</td>\n",
-       "      <td>192.168.0.1</td>\n",
-       "      <td>GET</td>\n",
-       "      <td>/api/tags</td>\n",
-       "      <td>0.000481</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2025-02-18 08:21:27</td>\n",
-       "      <td>200</td>\n",
-       "      <td>192.168.0.1</td>\n",
-       "      <td>GET</td>\n",
-       "      <td>/api/tags</td>\n",
-       "      <td>0.000370</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2025-02-18 08:21:28</td>\n",
-       "      <td>200</td>\n",
-       "      <td>192.168.0.1</td>\n",
-       "      <td>GET</td>\n",
-       "      <td>/api/tags</td>\n",
-       "      <td>0.000423</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2025-02-18 08:21:28</td>\n",
-       "      <td>200</td>\n",
-       "      <td>192.168.0.1</td>\n",
-       "      <td>GET</td>\n",
-       "      <td>/api/version</td>\n",
-       "      <td>0.000051</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2025-02-18 08:22:06</td>\n",
-       "      <td>200</td>\n",
-       "      <td>192.168.0.1</td>\n",
-       "      <td>GET</td>\n",
-       "      <td>/api/version</td>\n",
-       "      <td>0.000034</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Timestamp  Status    Client IP Method      Endpoint  \\\n",
-       "0 2025-02-18 08:21:25     200  192.168.0.1    GET     /api/tags   \n",
-       "1 2025-02-18 08:21:27     200  192.168.0.1    GET     /api/tags   \n",
-       "2 2025-02-18 08:21:28     200  192.168.0.1    GET     /api/tags   \n",
-       "3 2025-02-18 08:21:28     200  192.168.0.1    GET  /api/version   \n",
-       "4 2025-02-18 08:22:06     200  192.168.0.1    GET  /api/version   \n",
-       "\n",
-       "   Response Time (s)  \n",
-       "0           0.000481  \n",
-       "1           0.000370  \n",
-       "2           0.000423  \n",
-       "3           0.000051  \n",
-       "4           0.000034  "
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -118,12 +18,12 @@
     "\n",
     "\n",
     "# # Kiểm tra lại dữ liệu\n",
-    "df.head()"
+    "# df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
